@@ -5,7 +5,6 @@ module Cucumber
       LIB    = File.expand_path(File.dirname(__FILE__) + '/../..')
 
       attr_accessor :libs
-      attr_accessor :binary
       attr_accessor :step_list
       attr_accessor :step_pattern
       attr_accessor :feature_list
@@ -24,7 +23,6 @@ module Cucumber
 
         @feature_pattern = "features/**/*.feature" if feature_pattern.nil? && feature_list.nil?
         @step_pattern    = "features/**/*.rb"      if step_pattern.nil? && step_list.nil?
-        @binary        ||= File.expand_path(File.dirname(__FILE__) + '/../../../bin/cucumber')
         define_task
       end
 
@@ -37,7 +35,7 @@ module Cucumber
 
       def arguments_for_ruby_execution(task_args = nil)
         lib_args     = ['"%s"' % ([LIB] + libs).join(File::PATH_SEPARATOR)]
-        cucumber_bin = ['"%s"' % binary]
+        cucumber_bin = ['"%s"' % Cucumber.binary]
         cuc_opts     = [(ENV['CUCUMBER_OPTS'] || cucumber_opts)]
 
         step_files(task_args).each do |step_file|
